# moe_bot_auth_server_archive

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-dev  Dockerfile-mysql  LICENSE  app.py  backup_sqlite_db.py  build-container-image.sh  build-dev-container-image.sh  build-release-container-image.sh  create_server_db.py  docker-compose.yml  entrypoint.sh  gunicorn.conf.py  logingui.py  pyproject.toml  readme.md  readme.org  run-mariadb-container.sh  run_container.sh  run_dev_container.sh  run_release_container.sh  server.py
client/: _kullanici_olustur.py  admin_normal_usage.py  admin_requests.py  admin_test_user_requests.py  analytics.py  data.py  encryption.py  endpoints.py  genel_sunucu_istekleri.py  generate_passowrd_hash.py  lang.json  user_login.py  user_requests.py  utils.py
config/: cert.pem  config.toml.example
envs/: mariadb.env  moe_bot_auth_server_prod.env
karalama_dosyalari/: aes_encrpyt_decrypt.py  datetime_comparison.py  sqlalchemy_karalama.py  sqlalchemy_relationship.py
moe_bot_auth_server/: __init__.py  __main__.py  admin_control.py  cli.py  data_schema_validation.py  database_ops.py  enums.py  err_handlrs.py  main_app.py  paths.py
moe_bot_auth_server/config/: flask.py  secret_key.py
moe_gthr_auth_server/: __init__.py  __main__.py  admin_control.py  aes_crpyt.py  base_responses.py  cli.py  crpytion.py  cryption.py  data_schema_validation.py  database_op.py  database_ops.old.py  database_ops.py  enums.py  err_handlrs.py  main_app.py  paths.py  routes.py
moe_gthr_auth_server/config/: endpoints.py  flask.py  secret_key.py
static/: forms.css  main.js  style.css  warn.js
templates/: about.html  admin_control.html  admin_layout.html  detail.html  example.html  layout.html  list.html  login.html
templates/includes/: messages.html  navbar.html
templates/model_forms/: package_content_form_create.html  package_content_form_update.html  package_form_create.html  package_form_update.html  u_package_form_create.html  u_package_form_update.html  u_session_form_create.html  u_session_form_update.html  user_form.html  (+2 more)
tests/: app_admin_control_test.py  app_admin_delete_test.py  app_admin_info_test.py  app_admin_login_test.py  app_admin_register_test.py  app_admin_update_test.py  app_base_test.py  app_test.py  app_user_info_test.py  app_user_login_test.py  cli_test.py  conftest.py  data_schema_validation_test.py  db_models_test.py  test_app.py  test_data_schema_validation.py  test_db_models.py  testing_helpers.py
(+5 files in other folders)
