[tool.poetry]
name = "moe-gthr-auth-server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "LICENCE.md"
readme = "README.md"
packages = [{include = "moe_gthr_auth_server"}]

[tool.poetry.dependencies]
python = "^3.11"
Flask-SQLAlchemy = "^3.0.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.283"
pytest = "^7.4.0"
black = "^23.7.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
