[tool.poetry]
name = "moe-bot-auth-server"
version = "0.22.6-1"
description = ""
authors = ["mal1kc <mal1kc@www.com>"]
license = "LICENCE"
readme = "readme.org"
packages = [{include = "moe_bot_auth_server"}]

[tool.poetry.dependencies]
python = "^3.12"
Flask-SQLAlchemy = "^3.0.5"
schema = "^0.7.5"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.283"
pytest = "^7.4.0"
black = "^23.7.0"
requests = "^2.31.0"
pre-commit = "^3.3.3"
ruff-lsp = "^0.0.37"
isort = "^5.12.0"
pyflakes = "^3.1.0"
djlint = "^1.34.0"
pymysql = "^1.1.0"

[tool.poetry.group.mysql.dependencies]
pymysql = "^1.1.0"


[tool.poetry.group.postgresql.dependencies]
psycopg2-binary = "^2.9.9"

[tool.black]
python = "^3.11"
line-length = 92

[tool.ruff]
line-length = 92

[tool.pytest.ini_options]
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_cli = 1
log_cli_level = "DEBUG"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
